В стилях текст выровнял по левой стороне

--- a/next1/index.html
+++ b/next1/index.html
@@ -5,8 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-        
+        <div class="block">Разобраться с git моогут все</div>
+        <button id="github">Изучить git и github</button>
+        <p class="text">вернее разобраться могут лишь я)</p>
 
-<script src="scripts.js"></script>
+<script src="./scripts/scripts.js"></script>
 </body>
 </html>
