Изменил текст в индексе

--- a/next1/index.html
+++ b/next1/index.html
@@ -7,7 +7,7 @@
 <body>
         <div class="block">Разобраться с git моогут все</div>
         <button id="github">Изучить git и github</button>
-        <p class="text">вернее разобраться могут лишь я)</p>
+        <p class="text">вернее разобраться могут лишь все)</p>
 
 <script src="./scripts/scripts.js"></script>
 </body>
